examples/mood/tests/fixtures/call_expression.mood
fn add(a: f64, b: f64): f64 {
  a + b
}

fn double(a: f64): i32 {
  add(a, a)
}

pub fn test(): i32 {
  double(5)
}